[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
web3 = "^6.9.0"
requests = "^2.31.0"
uniswap-python = "^0.7.0"
python-telegram-bot = "^20.4"
api-nichotined = "^1.1.1"
telegram = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"